Fix text align

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -21,6 +21,7 @@
 
   &__content {
     display: flex;
+    flex-flow: column;
 
     &_distribute {
 
@@ -59,6 +60,8 @@
 
   &__footer {
     position: absolute;
+    left: 0;
+    right: 0;
     bottom: 0;
     display: flex;
     flex-flow: column;
