--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -26,11 +26,13 @@
 }
 
 .text {
+  display: flex;
+  flex-flow: column;
 
   &_align {
 
     &_center {
-      text-align: center;
+      align-items: center;
     }
 
   }
